<resources>
    <string name="app_name">Blue Note</string>

    <!-- fragment labels-->
    <string name="fragment_home">Home</string>
    <string name="fragment_note">Note</string>
    <string name="fragment_note_create">Create Note</string>
    <string name="fragment_note_page">Note Page</string>
    <string name="fragment_note_open">Note Open</string>
    <string name="fragment_sheet">Sheet</string>
    <string name="fragment_sheet_create">Create Sheet</string>
    <string name="fragment_sheet_question">Question</string>
    <string name="fragment_sheet_chart">Chart</string>
    <string name="fragment_more">More</string>

    <string name="notification_name" translatable="false">mini_service_notification</string>

    <!-- 노트생성 화면의 유저가 입력한 텍스트의 갯수-->
    <string name="display_count">%s/100</string>

    <!-- 노트 화면 리스트의 타이틀-->
    <string name="display_title">%s</string>

    <!-- 노트 페이지 화면의 날씨 정보 -->
    <string name="display_weather" translatable="false">Today %s°C, %s in %s</string>

    <!-- 시트 화면의 Question 갯수 ex) 1-20 -->
    <string name="display_question_range">%d-%d</string>

    <!-- Question 화면에서 문제마다 current 시간 표시 -->
    <string name="display_time">Progress : %s</string>

    <!-- 차트화면에서 보여줄 타이틀-->
    <string name="display_chart_title">Chart : %s, time : %s</string>
    <string name="display_chart_info">%d Question, +%d, -%d</string>

    <string name="desc_add">add</string>

    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="delete">Delete</string>
    <string name="msg_edit_note">Long click on the note you want to edit</string>
    <string name="msg_delete_note">Are you sure you want to delete?</string>
    <string name="msg_delete_note_guide">Select a note to delete</string>
    <string name="msg_save_note">Do you want to save the note?</string>
    <string name="open">Open</string>
    <string name="message">Message</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="search_max_count">1 ~ 12 Length</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="end">End</string>
    <string name="information">information</string>
    <string name="hint_start">ex) 1 ~ </string>
    <string name="hint_end"> ~ 200</string>
    <string name="sheet_creation_range">1 ~ 200 Range</string>
    <string name="sheet_creation_edit">Only the title can be changed</string>
    <string name="no_title">No Ttitle</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>
    <string name="d" translatable="false">D</string>
    <string name="e" translatable="false">E</string>
    <string name="total">Total</string>
    <string name="current">Current</string>
    <string name="helper">Helper</string>
    <string name="chart">Chart</string>
    <string name="error">Error</string>
    <string name="correct">( O )</string>
    <string name="wrong">( X )</string>
    <string name="max_range">Error,  Max 1~200</string>
    <string name="permission_guide_system_overlay">Permission Notice\n\nTo use helper service, you need to consent to the  \'System overlay window\' permission.</string>
    <string name="ok">OK</string>
    <string name="icon">icon</string>
    <string name="more">more</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="play">play</string>
    <string name="notification_helper">Helper is running</string>
    <string name="preference_file_key">helper_state</string>
    <string name="recent_sheet">Recent Sheets</string>
    <string name="recent_note">Recent Notes</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="notes">"Words : "</string>
    <string name="questions">"Sheets : "</string>
    <string name="finish_app">App Finish</string>
    <string name="msg_finish_app">Finish App?</string>
    <string name="finish">Finish</string>
    <string name="bluenote_version">BlueNote Version</string>
    <string name="opensource_license">OpenSource License</string>
    <string name="kakaotalk_openchat">Kakaotalk OpenChat</string>
    <string name="email">EMAIL</string>
    <string name="about_bluenote">About BlueNote</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="kakaotalk_link_agree">Would you like to go to the KakaoTalk BlueNote open chat?</string>
    <string name="request_email">Would you like to send an email?</string>
    <string name="email_address">1113437k@gmail.com</string>
    <string name="privacy_information">
블루노트 개인정보 처리방침\n
블루노트 개발자는 블루노트 앱 이용자의 소중한 개인정보를 보호하기 위해 개인정보보호 관련 법령을 준수합니다. 본 개인정보처리방침은 블루노트 앱에 적용됩니다. \n
\n\n
1. 개인정보 수집항목\n
개인을 식별할 수 있는 개인 정보는 수집하지 않습니다.\n
\n
2. 개인정보 자동 수집 장치\n
Google, Inc. (이하 ‘Google’)이 제공하는 Firebase Analytics(Google Analytics) 통계분석 툴, Admob 광고 솔루션 툴을 사용하고 있습니다.\n
\n
Google Analytics, Admob를 통해 수집되는 정보의 처리는 Google 개인정보보호정책과 Google Analytics 이용약관을 적용 받습니다.\n
\n
– Google 개인정보보호정책 : https://www.google.com/intl/ko/policies/privacy/\n
– Google Analytics 이용약관 : https://www.google.com/analytics/terms/kr.html\n
\n
Google Analytics는 개인을 식별할 수 있는 정보는 수집하지 않으며, 수집한 정보를 다른 경로를 통해 얻은 개인식별 정보와 결합하지 않습니다.\n
\n
3. 개인정보의 공유 및 제공\n
개인을 식별할 수 있는 정보가 없으며 제공하지 않습니다.\n
기본적으로 이용자의 사전 동의 없이는 범위를 초과하여 이용하거나 원칙적으로 이용자의 개인정보를 외부에 공개하지 않습니다. 다만 이용자가 사전에 동의한 하거나 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우 예외로 합니다.\n
개발자는 이용자의 ADID를 수집하지 않습니다.\n
\n
ADID(Android OS)/IDFA(iOS)란 모바일 앱 이용자의 광고 식별 값으로서, 사용자의 맞춤 서비스 제공이나 더 나은 환경의 광고를 제공하기 위한 측정 값입니다.\n
\n
거부방법\n
Android: 설정->구글(구글설정)->광고->광고 맞춤설정 선택 해제\n
\n
4. 개인정보의 처리위탁\n
개인을 식별할 수 있는 정보가 없으며 제공하지 않습니다.\n
Google Analytics 툴을 사용하고 있습니다. 익명의 정보가 구글 서버로 저장됩니다.\n
\n
5.개인정보의 보유 및 이용기간\n
별도의 개인정보를 보유하지 않습니다.\n
\n
6.개인정보 파기절차 및 방법\n
별도의 개인정보를 수집하지 않습니다. 사용자가 앱 삭제시 모든 정보가 사라집니다. 별도의 파기 절차가 없습니다.\n
\n
7.개인정보보호책임자 및 담당자의 연락처\n
별도의 개인정보를 수집하지 않지만 문의사항 발생시 블루노트 개발자, 1113437k@gmail.com 으로 문의 하실 수 있습니다.\n
\n
8. 고지의 의무\n
공고일자 : 2021년 2월 17일\n
시행일자 : 2021년 2월 17일\n
    </string>
    <string name="terms_of_service_information" >
서비스의 제공 및 변경\n
사용자는 별도의 회원가입 없이 노트 기능, 정답지 제공 및 블루노트에서 제공하는 서비스를 이용 할 수 있습니다.\n
블루노트는 변경될 서비스의 내용 및 제공일자를 미리 통지하고 변경하여 제공할 수 있습니다.\n
\n
업데이트로 인한 데이터 초기화가 발생 할 수 있습니다.\n
\n
서비스의 중단\n
서비스 운영이 불가능할경우 사전동의 없이 중단 할 수 있습니다.\n
\n
개인정보를 수집 하지 않습니다. 변동이 발생할 경우 사용자에게 알리겠습니다.\n
\n
광고게재 및 광고주와의 거래\n
서비스 이용자는 서비스상에 노출되는 광고게재에 대해 동의합니다.\n
서비스상에 게재되어 있거나 서비스를 통한 광고주의 판촉활동에 회원이 참여하거나 교신 또는 거래를 함으로써 발생하는 손실과 손해에 대해 책임을 지지 않습니다.\n
    </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree">Agree</string>
    <string name="preference_key" translatable="false">ServicepreferenceKey</string>
    <string name="service_agree" translatable="false">serviceAgree</string>
    <string name="blue_note" translatable="false">Blue Note</string>
    <string name="fragment_splash" translatable="false">Splash</string>
</resources>