<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.hurdle.bluenote.fragments.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_note"
        android:name="com.hurdle.bluenote.fragments.NoteFragment"
        android:label="@string/fragment_note"
        tools:layout="@layout/fragment_note" />
    <fragment
        android:id="@+id/nav_more"
        android:name="com.hurdle.bluenote.fragments.MoreFragment"
        android:label="@string/fragment_more"
        tools:layout="@layout/fragment_more"/>
    <fragment
        android:id="@+id/nav_sheet"
        android:name="com.hurdle.bluenote.fragments.SheetFragment"
        android:label="@string/fragment_sheet"
        tools:layout="@layout/fragment_sheet"/>
</navigation>