<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:menuCategory="secondary"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:menuCategory="secondary"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:menuCategory="secondary"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>