<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backgroundBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sheet_create_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginTop="@dimen/normal"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sheet_create_title_input_edit_text"
        style="@style/inputEditStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginTop="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_create_title_text_view"
        app:theme="@style/inputEditTheme" />

    <TextView
        android:id="@+id/sheet_create_start_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal"
        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/sheet_create_title_input_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/sheet_create_title_input_edit_text" />

    <EditText
        android:id="@+id/sheet_create_start_edit_text"
        style="@style/inputEditStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:autofillHints="no"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint_start"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toStartOf="@+id/sheet_create_end_edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_create_start_text_view"
        app:theme="@style/inputEditTheme" />

    <EditText
        android:id="@+id/sheet_create_end_edit_text"
        style="@style/inputEditStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginEnd="@dimen/normal"
        android:autofillHints="no"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint_end"
        android:inputType="number"
        android:maxEms="4"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sheet_create_start_edit_text"
        app:layout_constraintTop_toTopOf="@+id/sheet_create_start_edit_text"
        app:theme="@style/inputEditTheme" />

    <TextView
        android:id="@+id/sheet_create_end_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/end"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sheet_create_end_edit_text"
        app:layout_constraintStart_toStartOf="@+id/sheet_create_end_edit_text" />

    <ImageView
        android:id="@+id/sheet_create_info_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half"
        android:contentDescription="@string/information"
        app:layout_constraintBottom_toTopOf="@+id/sheet_create_end_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/sheet_create_end_edit_text"
        app:layout_constraintTop_toTopOf="@+id/sheet_create_end_text_view"
        app:srcCompat="@drawable/ic_baseline_info_24"
        app:tint="@color/white" />

    <Button
        android:id="@+id/sheet_create_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_btn"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/sheet_create_cancel_button"
        app:layout_constraintStart_toStartOf="@+id/sheet_create_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/sheet_create_cancel_button" />

    <Button
        android:id="@+id/sheet_create_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_btn"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/sheet_create_end_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/sheet_create_end_edit_text" />

    <ProgressBar
        android:id="@+id/sheet_create_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_sheet_keypad_left_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginTop="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:minWidth="100dp"
        android:minHeight="100dp"
        app:layout_constraintEnd_toStartOf="@+id/sheet_create_cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheet_create_start_edit_text">
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>