<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/view_max_height"
    tools:background="@color/blue_bg">

    <TextView
        android:id="@+id/question_list_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half"
        android:background="@drawable/bg_circle"
        android:gravity="center"
        android:minWidth="@dimen/question_size"
        android:minHeight="@dimen/question_size"
        android:tag="answer"
        android:textColor="@color/white"
        android:textSize="@dimen/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <Button
        android:id="@+id/question_list_a_button"
        style="@style/question_button_style"
        android:layout_marginStart="@dimen/half"
        android:text="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/question_list_b_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/question_list_number_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/question_list_b_button"
        style="@style/question_button_style"
        android:text="@string/b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/question_list_c_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/question_list_a_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/question_list_c_button"
        style="@style/question_button_style"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/question_list_d_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/question_list_b_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/question_list_d_button"
        style="@style/question_button_style"
        android:text="@string/d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/question_list_e_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/question_list_c_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/question_list_e_button"
        style="@style/question_button_style"
        android:layout_marginEnd="@dimen/half"
        android:text="@string/e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/question_list_d_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_list_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:layout_marginBottom="@dimen/small"
        android:textColor="@color/white"
        android:textSize="@dimen/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/question_list_a_button"
        app:layout_constraintTop_toBottomOf="@+id/question_list_a_button"
        tools:text="진행 00:00" />

</androidx.constraintlayout.widget.ConstraintLayout>